# source-code-plagiarism-inspection-system

./: README.md  requirements.txt  setup.cfg
app/: streamlit_app.py
src/: batch_scan.py  compute_embeddings.py  dataset.py  embeddings.py  features.py  model.py  preprocess.py
src/source_code_plagiarism_inspection_system.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_preprocess.py
