[metadata]
name = source-code-plagiarism-inspection-system
version = 0.2.0
author = Your Name
description = Cutting-edge source code plagiarism detection using TF-IDF, CodeBERT embeddings, and AST normalization
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
